group 'JMarkPad'
version '2.1.1'
apply plugin: 'java'

sourceCompatibility = 1.9


repositories {
    jcenter()
    mavenCentral()
}

dependencies {

    // Use JUnit test framework
    testCompile 'junit:junit:4.12'

    // https://mvnrepository.com/artifact/com.jfoenix/jfoenix
    compile group: 'com.jfoenix', name: 'jfoenix', version: '9.0.1'


}
sourceSets {
    main {
        java {
            srcDirs = ["src/main/java"]
        }
        resources {
            srcDirs = ["src/main/resources"]
            includes = ["**/*.fxml", "**/*.css"]
            includes = []
        }
    }
}
ext.moduleName = 'com.jfoenix'
compileJava {
    inputs.property("moduleName", moduleName)
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
        ]
        classpath = files()
    }
}
jar {
    manifest {
        attributes(
                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
                'Main-class': 'ui.UI'
        )
    }
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    baseName = project.name
}
def java_home = System.getenv('JAVA_HOME')
task link(type: Exec) {
    dependsOn 'clean'
    dependsOn 'jar'

    workingDir 'build'

    commandLine "${java_home}/bin/jlink", '--module-path', "libs${File.pathSeparatorChar}${java_home}/jmods",
            '--add-modules', 'app', '--launcher', 'app=app/ui.UI', '--output', 'dist', '--strip-debug',
            '--compress', '2', '--no-header-files', '--no-man-pages'
}
